--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "express": "^4.15.2",
-    "q": "^1.5.0"
+    "google-spreadsheet": "^3.1.15",
+    "q": "^1.5.0",
+    "request": "^2.88.2"
   }
 }
